Fixed main being overlapped by header

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ main {
 
     justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 4rem auto;
     padding: 0 0.5rem;
 }
 
